lex.go

//line lex.rl:1
package main

import (
        "fmt"
        
)


//line lex.go:12
const thermostat_start int = 6
const thermostat_first_final int = 6
const thermostat_error int = 0

const thermostat_en_main int = 6


//line lex.rl:14


type lexer struct {
    data []byte
    p, pe, cs int
    ts, te, act int
}

func newLexer(data []byte) *lexer {
    lex := &lexer{ 
        data: data,
        pe: len(data),
    }
    
//line lex.go:35
	{
	 lex.cs = thermostat_start
	 lex.ts = 0
	 lex.te = 0
	 lex.act = 0
	}

//line lex.rl:28
    return lex
}


func (lex *lexer) Lex(out *yySymType) int {
    eof := lex.pe
    tok := 0
    
//line lex.go:52
	{
	if ( lex.p) == ( lex.pe) {
		goto _test_eof
	}
	switch  lex.cs {
	case 6:
		goto st_case_6
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 4:
		goto st_case_4
	case 7:
		goto st_case_7
	case 8:
		goto st_case_8
	case 9:
		goto st_case_9
	case 10:
		goto st_case_10
	case 11:
		goto st_case_11
	case 12:
		goto st_case_12
	case 13:
		goto st_case_13
	case 14:
		goto st_case_14
	case 15:
		goto st_case_15
	case 16:
		goto st_case_16
	case 17:
		goto st_case_17
	case 18:
		goto st_case_18
	case 19:
		goto st_case_19
	case 20:
		goto st_case_20
	case 21:
		goto st_case_21
	case 22:
		goto st_case_22
	case 23:
		goto st_case_23
	case 24:
		goto st_case_24
	case 25:
		goto st_case_25
	case 26:
		goto st_case_26
	case 27:
		goto st_case_27
	case 28:
		goto st_case_28
	case 29:
		goto st_case_29
	case 30:
		goto st_case_30
	case 31:
		goto st_case_31
	case 32:
		goto st_case_32
	case 33:
		goto st_case_33
	case 34:
		goto st_case_34
	case 35:
		goto st_case_35
	case 36:
		goto st_case_36
	case 37:
		goto st_case_37
	case 38:
		goto st_case_38
	case 39:
		goto st_case_39
	case 40:
		goto st_case_40
	case 41:
		goto st_case_41
	case 42:
		goto st_case_42
	case 43:
		goto st_case_43
	case 44:
		goto st_case_44
	case 45:
		goto st_case_45
	case 46:
		goto st_case_46
	case 47:
		goto st_case_47
	case 48:
		goto st_case_48
	case 49:
		goto st_case_49
	case 50:
		goto st_case_50
	case 51:
		goto st_case_51
	case 52:
		goto st_case_52
	case 53:
		goto st_case_53
	case 54:
		goto st_case_54
	case 55:
		goto st_case_55
	case 56:
		goto st_case_56
	case 57:
		goto st_case_57
	case 58:
		goto st_case_58
	case 59:
		goto st_case_59
	case 60:
		goto st_case_60
	case 61:
		goto st_case_61
	case 62:
		goto st_case_62
	case 63:
		goto st_case_63
	case 64:
		goto st_case_64
	case 65:
		goto st_case_65
	case 66:
		goto st_case_66
	case 67:
		goto st_case_67
	case 68:
		goto st_case_68
	case 69:
		goto st_case_69
	case 70:
		goto st_case_70
	case 71:
		goto st_case_71
	case 5:
		goto st_case_5
	}
	goto st_out
tr0:
//line lex.rl:63
 lex.te = ( lex.p)+1
{ tok = NEQ; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr3:
//line lex.rl:54
 lex.te = ( lex.p)+1
{tok=VAL1;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr4:
//line lex.rl:51
 lex.te = ( lex.p)+1
{tok=AND;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr5:
//line lex.rl:52
 lex.te = ( lex.p)+1
{tok=OR;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr6:
//line lex.rl:53
 lex.te = ( lex.p)+1
{tok=NUM;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr7:
//line lex.rl:94
 lex.te = ( lex.p)+1

	goto st6
tr11:
//line lex.rl:39
 lex.te = ( lex.p)+1
{ tok = L_PAREN; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr12:
//line lex.rl:40
 lex.te = ( lex.p)+1
{ tok = R_PAREN; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr13:
//line lex.rl:81
 lex.te = ( lex.p)+1
{tok=MULT;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr15:
//line lex.rl:90
 lex.te = ( lex.p)+1
{tok=COMMA;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr17:
//line lex.rl:82
 lex.te = ( lex.p)+1
{tok = DIV;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr18:
//line lex.rl:47
 lex.te = ( lex.p)+1
{ tok = FALSE; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr21:
//line lex.rl:78
 lex.te = ( lex.p)+1
{tok=COLON;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr22:
//line lex.rl:92
 lex.te = ( lex.p)+1
{tok=SEMI_COL;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr27:
//line lex.rl:43
 lex.te = ( lex.p)+1
{ tok = L_B; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr28:
//line lex.rl:44
 lex.te = ( lex.p)+1
{ tok = R_B; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr40:
//line lex.rl:41
 lex.te = ( lex.p)+1
{ tok = L_CB; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr42:
//line lex.rl:42
 lex.te = ( lex.p)+1
{ tok = R_CB; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr43:
//line lex.rl:79
 lex.te = ( lex.p)
( lex.p)--
{tok=PLUS;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr44:
//line lex.rl:49
 lex.te = ( lex.p)+1
{tok=INC;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr45:
//line lex.rl:80
 lex.te = ( lex.p)
( lex.p)--
{tok=MINUS;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr46:
//line lex.rl:50
 lex.te = ( lex.p)+1
{tok=DEC;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr47:
//line NONE:1
	switch  lex.act {
	case 1:
	{( lex.p) = ( lex.te) - 1
 tok = FUNC; {( lex.p)++;  lex.cs = 6; goto _out }}
	case 2:
	{( lex.p) = ( lex.te) - 1
 tok = MAIN_TOKEN; {( lex.p)++;  lex.cs = 6; goto _out }}
	case 9:
	{( lex.p) = ( lex.te) - 1
tok = ID; {( lex.p)++;  lex.cs = 6; goto _out }}
	case 10:
	{( lex.p) = ( lex.te) - 1
 tok = TRUE; {( lex.p)++;  lex.cs = 6; goto _out }}
	case 17:
	{( lex.p) = ( lex.te) - 1
tok=NUM;{( lex.p)++;  lex.cs = 6; goto _out }}
	}
	
	goto st6
tr48:
//line lex.rl:62
 lex.te = ( lex.p)
( lex.p)--
{ tok = LT; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr49:
//line lex.rl:59
 lex.te = ( lex.p)+1
{ tok = LE; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr50:
//line lex.rl:91
 lex.te = ( lex.p)
( lex.p)--
{tok=ASSIGN_EQ;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr51:
//line lex.rl:61
 lex.te = ( lex.p)+1
{tok = EQ;{( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr52:
//line lex.rl:60
 lex.te = ( lex.p)
( lex.p)--
{ tok = GT; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr53:
//line lex.rl:58
 lex.te = ( lex.p)+1
{ tok = GE; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
tr54:
//line lex.rl:45
 lex.te = ( lex.p)
( lex.p)--
{tok = ID; {( lex.p)++;  lex.cs = 6; goto _out }}
	goto st6
	st6:
//line NONE:1
 lex.ts = 0

		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof6
		}
	st_case_6:
//line NONE:1
 lex.ts = ( lex.p)

//line lex.go:387
		switch  lex.data[( lex.p)] {
		case 0:
			goto tr6
		case 32:
			goto tr7
		case 33:
			goto st1
		case 34:
			goto st2
		case 38:
			goto st4
		case 40:
			goto tr11
		case 41:
			goto tr12
		case 42:
			goto tr13
		case 43:
			goto st7
		case 44:
			goto tr15
		case 45:
			goto st8
		case 47:
			goto tr17
		case 48:
			goto tr18
		case 49:
			goto tr19
		case 58:
			goto tr21
		case 59:
			goto tr22
		case 60:
			goto st10
		case 61:
			goto st11
		case 62:
			goto st12
		case 91:
			goto tr27
		case 93:
			goto tr28
		case 95:
			goto tr26
		case 98:
			goto st14
		case 99:
			goto st18
		case 101:
			goto st28
		case 102:
			goto st36
		case 104:
			goto st45
		case 105:
			goto st50
		case 108:
			goto st51
		case 109:
			goto st53
		case 114:
			goto st56
		case 116:
			goto st61
		case 119:
			goto st68
		case 123:
			goto tr40
		case 124:
			goto st5
		case 125:
			goto tr42
		}
		switch {
		case  lex.data[( lex.p)] < 50:
			if 9 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 13 {
				goto tr7
			}
		case  lex.data[( lex.p)] > 57:
			switch {
			case  lex.data[( lex.p)] > 90:
				if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
					goto tr26
				}
			case  lex.data[( lex.p)] >= 65:
				goto tr26
			}
		default:
			goto tr20
		}
		goto st0
st_case_0:
	st0:
		 lex.cs = 0
		goto _out
	st1:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof1
		}
	st_case_1:
		if  lex.data[( lex.p)] == 61 {
			goto tr0
		}
		goto st0
	st2:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof2
		}
	st_case_2:
		switch  lex.data[( lex.p)] {
		case 10:
			goto st0
		case 34:
			goto st0
		}
		goto st3
	st3:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof3
		}
	st_case_3:
		if  lex.data[( lex.p)] == 34 {
			goto tr3
		}
		goto st0
	st4:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof4
		}
	st_case_4:
		if  lex.data[( lex.p)] == 38 {
			goto tr4
		}
		goto st0
	st7:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof7
		}
	st_case_7:
		if  lex.data[( lex.p)] == 43 {
			goto tr44
		}
		goto tr43
	st8:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof8
		}
	st_case_8:
		if  lex.data[( lex.p)] == 45 {
			goto tr46
		}
		goto tr45
tr19:
//line NONE:1
 lex.te = ( lex.p)+1

//line lex.rl:46
 lex.act = 10;
	goto st9
tr20:
//line NONE:1
 lex.te = ( lex.p)+1

//line lex.rl:53
 lex.act = 17;
	goto st9
	st9:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof9
		}
	st_case_9:
//line lex.go:560
		if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
			goto tr20
		}
		goto tr47
	st10:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof10
		}
	st_case_10:
		if  lex.data[( lex.p)] == 61 {
			goto tr49
		}
		goto tr48
	st11:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof11
		}
	st_case_11:
		if  lex.data[( lex.p)] == 61 {
			goto tr51
		}
		goto tr50
	st12:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof12
		}
	st_case_12:
		if  lex.data[( lex.p)] == 61 {
			goto tr53
		}
		goto tr52
tr26:
//line NONE:1
 lex.te = ( lex.p)+1

//line lex.rl:45
 lex.act = 9;
	goto st13
tr82:
//line NONE:1
 lex.te = ( lex.p)+1

//line lex.rl:37
 lex.act = 1;
	goto st13
tr90:
//line NONE:1
 lex.te = ( lex.p)+1

//line lex.rl:38
 lex.act = 2;
	goto st13
	st13:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof13
		}
	st_case_13:
//line lex.go:618
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr47
	st14:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof14
		}
	st_case_14:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 114:
			goto st15
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st15:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof15
		}
	st_case_15:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 101:
			goto st16
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st16:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof16
		}
	st_case_16:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 97:
			goto st17
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 98 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st17:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof17
		}
	st_case_17:
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st18:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof18
		}
	st_case_18:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 104:
			goto st19
		case 111:
			goto st21
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st19:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof19
		}
	st_case_19:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 97:
			goto st20
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 98 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st20:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof20
		}
	st_case_20:
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st21:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof21
		}
	st_case_21:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 110:
			goto st22
		case 111:
			goto st27
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st22:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof22
		}
	st_case_22:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 116:
			goto st23
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st23:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof23
		}
	st_case_23:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 105:
			goto st24
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st24:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof24
		}
	st_case_24:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 110:
			goto st25
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st25:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof25
		}
	st_case_25:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 117:
			goto st26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st26:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof26
		}
	st_case_26:
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st27:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof27
		}
	st_case_27:
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st28:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof28
		}
	st_case_28:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 99:
			goto st29
		case 108:
			goto st31
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st29:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof29
		}
	st_case_29:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 104:
			goto st30
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st30:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof30
		}
	st_case_30:
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st31:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof31
		}
	st_case_31:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 115:
			goto st32
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st32:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof32
		}
	st_case_32:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 101:
			goto st33
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st33:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof33
		}
	st_case_33:
		if  lex.data[( lex.p)] == 95 {
			goto st34
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st34:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof34
		}
	st_case_34:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 105:
			goto st35
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st35:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof35
		}
	st_case_35:
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st36:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof36
		}
	st_case_36:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 97:
			goto st37
		case 108:
			goto st40
		case 117:
			goto st43
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 98 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st37:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof37
		}
	st_case_37:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 108:
			goto st38
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st38:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof38
		}
	st_case_38:
		switch  lex.data[( lex.p)] {
		case 95:
			goto tr26
		case 115:
			goto st39
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st39:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof39
		}
	st_case_39:
		if  lex.data[( lex.p)] == 95 {
			goto tr26
		}
		switch {
		case  lex.data[( lex.p)] < 65:
			if 48 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 57 {
				goto tr26
			}
		case  lex.data[( lex.p)] > 90:
			if 97 <=  lex.data[( lex.p)] &&  lex.data[( lex.p)] <= 122 {
				goto tr26
			}
		default:
			goto tr26
		}
		goto tr54
	st40:
		if ( lex.p)++; ( lex.p) == ( lex.pe) {
			goto _test_eof40
		}
	st_case_40:
		switch  lex.data[( lex.p)] {
		case 95:
